--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.6.3",
+    "@types/jest": "^29.5.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
